update spring boot to 2.4.6
update tests to use junit 5 (jupiter)